<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center"
    tools:context=".activities.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        android:text="@string/welcome_intro" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/line_break_single" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/subtitle_size"
        android:text="@string/welcome_instructions" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/line_break_single" />

    <Button
        android:id="@+id/create_new_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_size"
        android:padding="@dimen/button_padding"
        android:text="@string/create_new_text" />

    <Button
        android:id="@+id/view_current_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_size"
        android:padding="@dimen/button_padding"
        android:text="@string/view_current_text" />

    <Button
        android:id="@+id/view_past_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_size"
        android:padding="@dimen/button_padding"
        android:text="@string/view_past_text" />

    <Button
        android:id="@+id/view_archived_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_size"
        android:padding="@dimen/button_padding"
        android:text="@string/view_archived_text" />

    <Button
        android:id="@+id/configure_audio_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_size"
        android:padding="@dimen/button_padding"
        android:text="Configure Audio" />

    <!-- <Button
        android:id="@+id/configure_email_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_size"
        android:padding="@dimen/button_padding"
        android:text="Configure Email" /> -->

</LinearLayout>